test/errors/array2.ds

#OUTPUT
#Syntax Error: Expected '=' in array assignment.
# -> [14] numbers[1] 55
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    int[10] numbers = array
    numbers[1] 55
    
    return 0
end

